Driver_Interface/.metadata/.plugins/org.eclipse.cdt.ui/Driver_Interface.build.log
22:52:12 **** Incremental Build of configuration Debug for project Driver_Interface ****
make all 
'Building file: ../Application/User/buttons.c'
'Invoking: MCU GCC Compiler'
C:\Users\Tom\Documents\CMR\STM32 Development\firmware\Driver_Interface\SW4STM32\Driver_Interface\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -D__weak="__attribute__((weak))" -D__packed="__attribute__((__packed__))" -DUSE_HAL_DRIVER -DSTM32F429xx -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/SW4STM32/Driver_Interface/Application/User" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Inc" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Middlewares/Third_Party/FreeRTOS/Source/include" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Drivers/CMSIS/Include" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Inc"  -Os -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Application/User/buttons.d" -MT"Application/User/buttons.o" -o "Application/User/buttons.o" "../Application/User/buttons.c"
../Application/User/buttons.c: In function 'vPollButtonsTask':
../Application/User/buttons.c:35:12: warning: passing argument 1 of 'osDelay' makes integer from pointer without a cast [-Wint-conversion]
   osDelay( &xLastWakeTime, ( osKernelSysTickMicroSec(10*1000) ) );
            ^
In file included from ../Application/User/buttons.h:9:0,
                 from ../Application/User/buttons.c:7:
C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h:480:10: note: expected 'uint32_t {aka long unsigned int}' but argument is of type 'uint32_t * {aka long unsigned int *}'
 osStatus osDelay (uint32_t millisec);
          ^
../Application/User/buttons.c:35:3: error: too many arguments to function 'osDelay'
   osDelay( &xLastWakeTime, ( osKernelSysTickMicroSec(10*1000) ) );
   ^
In file included from ../Application/User/buttons.h:9:0,
                 from ../Application/User/buttons.c:7:
C:/Users/Tom/Documents/CMR/STM32 Development/firmware/Driver_Interface/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h:480:10: note: declared here
 osStatus osDelay (uint32_t millisec);
          ^
../Application/User/buttons.c: In function 'updateButton':
../Application/User/buttons.c:47:4: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
    uint32_t buttonMsg = * (uint32_t *) &buttonObject;
    ^
../Application/User/buttons.c:48:13: warning: unused variable 'messageStatus' [-Wunused-variable]
    osStatus messageStatus = osMessagePut(buttonQueue, buttonMsg, 0);
             ^
make: *** [Application/User/buttons.o] Error 1

22:52:12 Build Finished (took 442ms)

